<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E1E1E1"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animation_view_doc"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/hello_animation" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/hls_videos_card"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/curve_shave"
                    app:cardCornerRadius="20dp">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <TextView
                            android:id="@+id/hls_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/hls_videos"
                            android:textColor="@color/black"
                            android:textSize="24sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/hls_txt"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="30dp"
                            android:text="@string/click_to_watch_hls_videos" />
                    </RelativeLayout>


                </androidx.cardview.widget.CardView>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/dash_videos_card"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/curve_shave"
                    app:cardCornerRadius="20dp">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <TextView
                            android:id="@+id/dash_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/dash_videos"
                            android:textColor="@color/black"
                            android:textSize="24sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/dash_txt"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="30dp"
                            android:text="@string/click_to_watch_dash_videos" />
                    </RelativeLayout>


                </androidx.cardview.widget.CardView>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/subtitled_videos_card"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/curve_shave"
                    app:cardCornerRadius="20dp">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <TextView
                            android:id="@+id/subtitled_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/subtitled_videos"
                            android:textColor="@color/black"
                            android:textSize="24sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/subtitled_txt"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="30dp"
                            android:text="@string/click_to_watch_subtitled" />
                    </RelativeLayout>


                </androidx.cardview.widget.CardView>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>

    <!--<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_margin="15dp">

                    <com.google.android.exoplayer2.ui.PlayerView
                        android:id="@+id/player_view"
                        android:layout_width="match_parent"
                        android:layout_height="400dp"
                        android:focusable="true"
                        app:controller_layout_id="@layout/custom"
                        app:resize_mode="fill" />

                    <com.google.android.exoplayer2.ui.SubtitleView
                        android:id="@+id/subtitle_view"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginBottom="20dp"
                        android:visibility="visible" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="invisible" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_margin="15dp">

                    <com.google.android.exoplayer2.ui.PlayerView
                        android:id="@+id/player_view2"
                        android:layout_width="match_parent"
                        android:layout_height="400dp"
                        android:focusable="true"
                        app:controller_layout_id="@layout/custom_two"
                        app:resize_mode="fill" />

                    <ProgressBar
                        android:id="@+id/progressBar2"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="invisible" />

                </FrameLayout>

            </LinearLayout>
        </ScrollView>
    </RelativeLayout> -->